# HelloFractals

./: .gitignore  CMakeLists.txt  HelloFractals.kdev4  LICENSE  README.md  functions.txt  program-ast.txt
src/: array_utils.cpp  array_utils.h  fractalthread.cpp  fractalthread.h  image_writer.cpp  image_writer.h  main.cpp  math_utils.cpp  math_utils.h  pixel_utils.cpp  pixel_utils.h  stringutils.cpp  stringutils.h  valuegenerator.cpp  valuegenerator.h  vectors.cpp  vectors.h
src/program/: addition.cpp  addition.h  assignment.cpp  assignment.h  block.cpp  block.h  constant.cpp  constant.h  contextconfigurator.cpp  contextconfigurator.h  declaration.cpp  declaration.h  division.cpp  division.h  exponent.cpp  exponent.h  functiondefinition.cpp  functiondefinition.h  functiondescription.cpp  functiondescription.h  functioninvocation.cpp  functioninvocation.h  multiplication.cpp  multiplication.h  parsingexception.cpp  parsingexception.h  program.cpp  program.h  programdriver.cpp  programdriver.h  programhandler.cpp  programhandler.h  programlexer.cpp  programlexer.h  programlexer.l  programparser.y  programrunner.cpp  programrunner.h  runtimebuiltinfunction.cpp  runtimebuiltinfunction.h  (+26 more)
